# AURO

./: .gitignore  README.md  data_log_0.csv
assessment/launch/: assessment_launch.py  bringup_launch.py  localization_launch.py  navigation_launch.py  spawn_robot_launch.py
assessment/models/waffle_pi/: model.sdf
assessment/rviz/: namespaced_nav2.rviz
solution/: setup.py
solution/config/: initial_poses.yaml
solution/launch/: edited_launch.py  solution_launch.py  solution_nav2_launch.py
solution/msg/: ItemZones.msg
solution/old/: robot_controller cop(2)y.py  robot_controller copy 2.py  robot_controller copy.py  robot_controller testing.py  robot_controller_base.py  robot_controller_idk.py  robot_controller_week_8_working.py  robot_controllerfailed.py
solution/params/: custom_nav2_params_namespaced.yaml
solution/solution/: robot_controller copy.py  robot_controller.py  robot_controller_week_5.py  robot_controller_week_8_working.py
solution_interfaces/: CMakeLists.txt  package.xml
solution_interfaces/msg/: ItemZone.msg  ItemZones.msg
src/my_package/: package.xml  setup.py
src/py_pubsub/: package.xml  setup.py
week_8/week_8/: path_publisher.py
